--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <a href="#cotton-saree-section" class="nav-item nav-link">Cotton Saree</a>
                         <a href="#banarasi-saree-section" class="nav-item nav-link">Banarasi Saree</a>
                         <a href="#Mysore-Silk-Saree-section" class="nav-item nav-link">Mysore Silk Saree</a>
-                        <a href="#Kanjivaram-Saree-section" class="nav-item nav-link">Kanjivaram Silk Saree</a>
+                        <a href="#Kanjivaram-Saree-section" class="nav-item nav-link"> Silk Saree</a>
                         <a href="#Chiffon-Saree-section" class="nav-item nav-link">Chiffon Saree</a>
                         <a href="#Kanjiparam-Saree-section" class="nav-item nav-link">Kanchipuram Saree</a>
                     </div>
@@ -227,7 +227,7 @@
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">Collections</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img herf="" class="img-fluid" src="img/silk saree.jpg" alt="">
+                        <img class="img-fluid" src="img/silk saree.jpg" alt="">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Silk Saree</h5>
                 </div>
@@ -236,7 +236,7 @@
                 <div id="soft-silk-section" class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Prod</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img herf=""class="img-fluid" src="img/softsilk.jpeg" alt="" style="width: 500px;height: 368px;">
+                        <img class="img-fluid" src="img/softsilk.jpeg" alt="" style="width: 500px;height: 368px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Soft Silk Saree</h5>
                 </div>
@@ -245,7 +245,7 @@
                 <div id="cotton-saree-section"class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img herf=""class="img-fluid" src="img/cotton saree.png" alt="">
+                        <img class="img-fluid" src="img/cotton saree.png" alt="">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Cotton Saree</h5>
                 </div>
@@ -254,7 +254,7 @@
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img herf="" class="img-fluid" src="img/banarasi saree.png" alt="" style="width: 500px;height: 322px;">
+                        <img class="img-fluid" src="img/banarasi saree.png" alt="" style="width: 500px;height: 322px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Banarasi Saree</h5>
                 </div>
@@ -263,7 +263,7 @@
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img herf=""class="img-fluid" src="img/mysore silk.png" alt="" style="width: 500px;height: 322px;">
+                        <img class="img-fluid" src="img/mysore silk.png" alt="" style="width: 500px;height: 322px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Mysore Silk Saree</h5>
                 </div>
@@ -272,7 +272,7 @@
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img herf=""class="img-fluid" src="img/kanjivaram silk.jpg" alt="" style="width: 500px;height: 322px;">
+                        <img class="img-fluid" src="img/kanjivaram silk.jpg" alt="" style="width: 500px;height: 322px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Kanjivaram Saree</h5>
                 </div>
@@ -281,7 +281,7 @@
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img herf=""class="img-fluid" src="img/chiffon saree.jpg" alt="" style="width: 500px;height: 322px;">
+                        <img class="img-fluid" src="img/chiffon saree.jpg" alt="" style="width: 500px;height: 322px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Chiffon Saree</h5>
                 </div>
@@ -290,7 +290,7 @@
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img herf=""class="img-fluid" src="img/kanjipuram saree.png" alt="" style="width: 500px;height: 322px;">
+                        <img class="img-fluid" src="img/kanjipuram saree.png" alt="" style="width: 500px;height: 322px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Kanjiparam Saree</h5>
                 </div>
